# catfeeder

./: .gitignore  Cargo.toml  Dockerfile  alg.txt  build.bash  catfeeder.service  checkConnections.bash  checkFeeders.bash  distributeFood.bash  dockerBuildAndRun.bash  install.bash
catfeederd/: catfeederd.service  catfeederd.timer  distribute_food.bash  distribute_food_extra.bash  install_catfeederd.bash
src/: main.rs
