[package]
name = "catfeeder"
version = "0.0.1"
authors = ["jdnewman85"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio-cdev = { git="https://github.com/jdnewman85/gpio-cdev", version="*", features=["async-tokio"] }
tokio = { version="1", features=["full"] }
futures = "0.3"

tokio-util = { version="*", features=["full"] }
bytes = "*"
